<resources>
    <string name="app_name">TextScanner</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="continue_label">Continue</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="error_loading_image">Error loading image.</string>
    <string name="failed_to_create_file">Failed to create file.</string>
    <string name="failed_to_load_image">Failed to load image.</string>
    <string name="failed_to_open_camera">Failed to open camera.</string>
    <string name="failed_to_scan_image">Failed to scan image.</string>
    <string name="file_saved">File saved.</string>
    <string name="image">Image</string>
    <string name="not_now">Not now</string>
    <string name="no_text_found">No text found.</string>
    <string name="no_text_to_copy">No text to copy.</string>
    <string name="no_text_to_share">No text to share.</string>
    <string name="pdf">PDF</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_content"><b>Mayuresh Karekar</b> built the <b>TextScanner</b> app as a Free app. This SERVICE is provided by Mayuresh Karekar at no cost and is intended for use as is.\n\nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at TextScanner unless otherwise defined in this Privacy Policy.\n\n<b>Information Collection and Use</b>\nFor a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.\n\nThe app does use third party services that may collect information used to identify you.\n\nLink to privacy policy of third party service providers used by the app\n\nGoogle Play Services- https://www.google.com/policies/privacy/\n\n<b>Log Data</b>\nI want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.\n\n<b>Cookies</b>\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.\n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n\n<b>Service Providers</b>\nI may employ third-party companies and individuals due to the following reasons:\n\n-To facilitate our Service;\n\n-To provide the Service on our behalf;\n\n-To perform Service-related services; or\n\n-To assist us in analyzing how our Service is used.\n\nI want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n\n<b>Security</b>\nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100&#37; secure and reliable, and I cannot guarantee its absolute security.\n\n<b>Links to Other Sites</b>\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n\n<b>Children’s Privacy</b>\nThese Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.\n\n<b>Changes to This Privacy Policy</b>\nI may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.\n\n<b>Contact Us</b>\nIf you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at mkarekar95@gmail.com.</string>
    <string name="proceed">Proceed</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="save_file_as">Save file as</string>
    <string name="scan_from_camera">Scan from camera</string>
    <string name="scan_from_image">Scan from image</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_app_message">Hey..!! I found this awesome app to extract text from image. Get it here https://play.google.com/store/apps/details?id=com.getext</string>
    <string name="share_this_app">Share this app</string>
    <string name="storage_path">Internal shared storage/TextScanner/</string>
    <string name="storage_permission_description">To save the file, allow TextScanner to access your device\'s storage.</string>
    <string name="tap_settings_permission_value">Tap Settings > Permissions, and turn %s on.</string>
    <string name="tap_plus_to_get_started">Tap + to get started</string>
    <string name="text_file">Text file</string>
    <string name="unable_to_perform_this_action">Unable to perform this action.</string>
</resources>