<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit_24dp"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_done"
        android:icon="@drawable/ic_done_24dp"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/ic_copy_24dp"
        android:title="@string/copy"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_save_as"
        android:icon="@drawable/ic_save_24dp"
        android:title="@string/save_as"
        app:showAsAction="never" />
</menu>