<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_as"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/storage_path" />

    <EditText
        android:id="@+id/et_filename"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_gray_round_corners"
        android:hint="@string/enter_file_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_file_as"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/text_file" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pdf" />

    </RadioGroup>

    <LinearLayout
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/btn_cancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_save"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>